--- a/app/client/style.css
+++ b/app/client/style.css
@@ -3,15 +3,22 @@
 
 /* Set up some CSS variables to theme the application. */
 :root {
-  --matr-navbar-bg: #ECECEC;
-  --matr-navbar-bg-rgb: 236, 236, 236;
+  --matr-navbar-bg: darkgreen;
+  --matr-navbar-bg-rgb: 1, 50, 32;
+  --matr-navbar-text-color: white;
 }
 
 /* Change bootstrap variable values.
  See https://getbootstrap.com/docs/5.2/customize/css-variables/
  */
 body {
-  --bs-light-rgb: var(--matr-navbar-bg-rgb);
+  --bs-dark: var(--matr-navbar-bg);
+  --bs-dark-rgb: var(--matr-navbar-bg-rgb);
+  background: fixed center url("https://w0.peakpx.com/wallpaper/851/985/HD-wallpaper-hawaii-rainbow-warriors-american-football-team-green-background-hawaii-rainbow-warriors-logo-grunge-art-ncaa-american-football-usa-hawaii-rainbow-warriors-emblem.jpg");
+  background-size: cover;
+}
+#middle{
+  color: white;
 }
 
 /* Set the alert background on the signin and signup pages. */
@@ -25,4 +32,24 @@ body {
   color: var(--bs-dark);
   padding-top: 10px;
   padding-bottom: 20px;
+}
+
+footer, footer a {
+  color: var(--matr-navbar-text-color);
+}
+
+body .navbar {
+  --bs-navbar-active-color: var(--matr-navbar-text-color);
+  --bs-navbar-brand-color: var(--matr-navbar-text-color);
+  --bs-navbar-brand-hover-color: var(--matr-navbar-text-color);
+  --bs-navbar-color: var(--matr-navbar-text-color);
+  --bs-navbar-hover-color: var(--matr-navbar-text-color);
+}
+
+.bg-dark a.dropdown-item {
+  color: var(--matr-navbar-bg);
+}
+
+.navbar a.nav-link.active {
+  color: var(--matr-navbar-text-color);
 }
