--- a/app/client/style.css
+++ b/app/client/style.css
@@ -6,6 +6,7 @@
   --matr-navbar-bg: darkgreen;
   --matr-navbar-bg-rgb: 1, 50, 32;
   --matr-navbar-text-color: white;
+  --matr-navbar-highlight-text: #959595;
 }
 
 /* Change bootstrap variable values.
@@ -51,5 +52,5 @@ body .navbar {
 }
 
 .navbar a.nav-link.active {
-  color: var(--matr-navbar-text-color);
+  color: var(--matr-navbar-highlight-text);
 }
