--- a/app/client/style.css
+++ b/app/client/style.css
@@ -20,7 +20,7 @@ body {
   --bs-dark: var(--matr-navbar-bg);
   --bs-dark-rgb: var(--matr-navbar-bg-rgb);
   background: url('/images/UHBackground.jpg');
-  background-size: 100%;
+  background-size: 100% auto;
 }
 #middle{
   color: white;
