--- a/app/client/style.css
+++ b/app/client/style.css
@@ -202,7 +202,7 @@ body .navbar {
 .generator-image {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 .generator-details {
