--- a/app/client/style.css
+++ b/app/client/style.css
@@ -146,7 +146,7 @@ body .navbar {
   background: radial-gradient(#ff9a9e, #fad0c4);
   border-radius: 10px;
   padding: 30px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   text-align: center;
   font-family: 'Trirong', serif;
 }
