--- a/app/client/style.css
+++ b/app/client/style.css
@@ -59,8 +59,9 @@ body .navbar {
   text-shadow: 0 0 5px black; /* Add a black shadow behind the text */
 }
 .bg-dark a.dropdown-item {
-  color: var(--matr-navbar-bg);
+  color: black;
   font-family: 'Trirong', serif;
+  text-shadow: 0 0 0;
 }
 
 .navbar a.nav-link.active {
