--- a/app/client/style.css
+++ b/app/client/style.css
@@ -221,3 +221,10 @@ body .navbar {
 .generator-description {
   margin-top: 0.5rem;
 }
+
+.landing-image {
+  width: 100%;
+  height: 400px;
+
+  border-radius: 10px;
+}
